Config Form Bootstrap

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -17,7 +17,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Administration</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Catégories</a></li>
-                        <li><a class="dropdown-item" href="#">Ingrédients</a></li>
+                        <li><a class="dropdown-item" href="{{ path('ingredient_index') }}">Ingrédients</a></li>
                         <li><a class="dropdown-item" href="#">Unités</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#">Configuration</a></li>
