--- a/templates/ingredient/edit.html.twig
+++ b/templates/ingredient/edit.html.twig
@@ -1,13 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Ingredient{% endblock %}
+{% block title %} - Ingrédients{% endblock %}
 
 {% block body %}
-    <h1>Edit Ingredient</h1>
 
-    {{ include('ingredient/_form.html.twig', {'button_label': 'Update'}) }}
+    <h1 class="my-4"><i class="fas fa-carrot"></i>&nbsp;Ingrédients</h1>
 
-    <a href="{{ path('ingredient_index') }}">back to list</a>
+    {% if ingredient.id %}
+        <div class="float-right">
+            <form method="post" action="{{ path('ingredient_delete', {'id': ingredient.id}) }}" onsubmit="return confirm('Suppression de cet ingrédient ?');">
+                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ ingredient.id) }}">
+                <button class="btn action btn-sm btn-danger"><i class="fas fa-trash"></i>&nbsp;Supprimer</button>
+            </form>
+        </div>
+        <h3 class="my-3"><i class="fas fa-edit"></i>&nbsp;{{ ingredient.name }}</h3>
+    {% else %}
+        <h3 class="my-3"><i class="fas fa-plus-circle"></i>&nbsp;Nouvel ingrédient</h3>
+    {% endif %}
 
-    {{ include('ingredient/_delete_form.html.twig') }}
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <div class="text-right">
+            <a class="btn btn-sm btn-secondary" href="{{ path('ingredient_index') }}">Retour</a>
+            {% if ingredient.id %}
+                <button class="btn btn-info"><i class="fas fa-edit"></i>&nbsp;Modifier</button>
+            {% else %}
+                <button class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</button>
+            {% endif %}
+        </div>
+    {{ form_end(form) }}
+
 {% endblock %}
