--- a/templates/ingredient/index.html.twig
+++ b/templates/ingredient/index.html.twig
@@ -1,16 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ingredient index{% endblock %}
+{% block title %} - Ingrédients{% endblock %}
 
 {% block body %}
-    <h1>Ingredient index</h1>
+
+    <h1 class="my-4"><i class="fas fa-carrot"></i>&nbsp;Ingrédients</h1>
+
+    {% include 'include/_flashbag.html.twig' %}
+
+    <div class="float-right">
+        <a href="{{ path('ingredient_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</a>
+    </div>
+    <h3><i class="fas fa-list-alt"></i>&nbsp;Liste des ingrédients</h3>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>actions</th>
+                <th>Nom</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -18,18 +26,16 @@
             <tr>
                 <td>{{ ingredient.id }}</td>
                 <td>{{ ingredient.name }}</td>
-                <td>
-                    <a href="{{ path('ingredient_show', {'id': ingredient.id}) }}">show</a>
-                    <a href="{{ path('ingredient_edit', {'id': ingredient.id}) }}">edit</a>
+                <td class="text-right">
+                    <a href="{{ path('ingredient_update', {'id': ingredient.id}) }}" class="btn btn-sm btn-info"><i class="fas fa-edit"></i>&nbsp;Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Aucun éléments dans la table</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('ingredient_create') }}">Create new</a>
 {% endblock %}
