--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -1,35 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Category index{% endblock %}
+{% block title %} - Les catégories{% endblock %}
 
 {% block body %}
-    <h1>Category index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for category in categories %}
-            <tr>
-                <td>{{ category.id }}</td>
-                <td>{{ category.name }}</td>
-                <td>
-                    <a href="{{ path('category_show', {'id': category.id}) }}">show</a>
-                    <a href="{{ path('category_edit', {'id': category.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <h1 class="my-4"><i class="fas fa-tag"></i>&nbsp;Catégories</h1>
 
-    <a href="{{ path('category_create') }}">Create new</a>
+    {% include 'include/_flashbag.html.twig' %}
+
+    <div class="float-right">
+        <a href="{{ path('category_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</a>
+    </div>
+    <h3><i class="fas fa-list-alt"></i>&nbsp;Liste des catégories</h3>
+
+    <div class="row my-2 text-center">
+    {% for category in categories %}
+        <div class="col-2">
+            <div class="my-2"><a href="{{ path('category_show', {'id': category.id}) }}"><img src="{{ asset('images/home-cat1.jpg') }}" width="100" height="100" class="rounded-circle"></a></div>
+            <h5><a href="{{ path('category_show', {'id': category.id}) }}">{{ category.name }}</a></h5>
+        </div>
+    {% endfor %}
+    </div>
+
 {% endblock %}
+
+{# &nbsp;<a href="{{ path('ingredient_update', {'id': category.id}) }}" class="btn btn-sm btn-info"><i class="fas fa-edit"></i></a> #}
