Recipe : Form avec champs select2

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,3 +4,5 @@
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/regular.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
+@import "~select2/src/scss/core.scss";
+@import "~@ttskch/select2-bootstrap4-theme/src//select2-bootstrap4.scss";
