Recipe : Unités des quantités

--- a/templates/_form/custom_types.html.twig
+++ b/templates/_form/custom_types.html.twig
@@ -64,12 +64,12 @@
     <div class="form-group form-row collection-item">
         <div class="col-sm-12">
             <div class="form-group form-row form-control-sm">
-                <div class="col-12 col-lg-7">
+                <div class="col-12 col-lg-4">
                     {{ form_widget(form.ingredient, { attr: form.ingredient.vars.attr|merge({'class': form.ingredient.vars.attr['class']|default('') ~ ' form-control-sm' }) }) }}
                     {{ form_errors(form.ingredient) }}
                     {{ form_help(form.ingredient) }}
                 </div>
-                <div class="col-12 col-lg-2">
+                <div class="col-12 col-lg-1">
                     {{ form_widget(form.quantity, { attr: form.quantity.vars.attr|merge({'class': form.quantity.vars.attr['class']|default('') ~ ' form-control-sm' }) }) }}
                     {{ form_errors(form.quantity) }}
                     {{ form_help(form.quantity) }}
@@ -78,6 +78,11 @@
                     {{ form_widget(form.unity, { attr: form.unity.vars.attr|merge({'class': form.unity.vars.attr['class']|default('') ~ ' form-control-sm' }) }) }}
                     {{ form_errors(form.unity) }}
                     {{ form_help(form.unity) }}
+                </div>
+                <div class="col-12 col-lg-4">
+                    {{ form_widget(form.note, { attr: form.note.vars.attr|merge({'class': form.note.vars.attr['class']|default('') ~ ' form-control-sm' }) }) }}
+                    {{ form_errors(form.note) }}
+                    {{ form_help(form.note) }}
                 </div>
                 <div class="col-2 col-lg-1">
                     <button type="button" class="btn btn-danger btn-sm collection-btn-delete">
