Création automatique des ingrédients

--- a/templates/recipe/edit.html.twig
+++ b/templates/recipe/edit.html.twig
@@ -31,4 +31,8 @@
         </div>
     {{ form_end(form) }}
 
+    {% include 'recipe/_create-ingredient.modal.html.twig' %}
+
+    {% include 'recipe/_constants.js.html.twig' %}
+
 {% endblock %}
