--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -30,7 +30,7 @@
                 <td>{{ recipe.timeCooking }}</td>
                 <td>
                     <a href="{{ path('recipe_show', {'id': recipe.id}) }}">show</a>
-                    <a href="{{ path('recipe_edit', {'id': recipe.id}) }}">edit</a>
+                    <a href="{{ path('recipe_update', {'id': recipe.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
