Unité les plus utilisées par ingrédient

--- a/templates/ingredient/index.html.twig
+++ b/templates/ingredient/index.html.twig
@@ -18,6 +18,7 @@
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
+                <th>Unité</th>
                 <th></th>
             </tr>
         </thead>
@@ -26,6 +27,7 @@
             <tr>
                 <td>{{ ingredient.id }}</td>
                 <td>{{ ingredient.name }}</td>
+                <td>{{ ingredient.unity.label }}</td>
                 <td class="text-right">
                     <a href="{{ path('ingredient_update', {'id': ingredient.id}) }}" class="btn btn-sm btn-info"><i class="fas fa-edit"></i>&nbsp;Modifier</a>
                 </td>
