Amélioration du JavaScript

--- a/templates/recipe/edit.html.twig
+++ b/templates/recipe/edit.html.twig
@@ -36,3 +36,8 @@
     {% include 'recipe/_constants.js.html.twig' %}
 
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('recipe') }}
+{% endblock %}
