--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -11,17 +11,13 @@
                     <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Recettes</a>
+                    <a class="nav-link" href="{{ path('recipe_index') }}">Recettes</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Administration</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{{ path('category_index') }}">Catégories</a></li>
-                        <li><a class="dropdown-item" href="{{ path('ingredient_index') }}">Ingrédients</a></li>
-                        <li><a class="dropdown-item" href="#">Unités</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Configuration</a></li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('category_index') }}">Catégories</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('ingredient_index') }}">Ingrédients</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
