--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}">
-        <title>{% block title %}MyCook !{% endblock %}</title>
+        <title>MyCook !{% block title %}{% endblock %}</title>
 
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -13,7 +13,7 @@
     <body>
         {% include '_navbar.html.twig' %}
 
-        {% block body %}{% endblock %}
+        <div class="container">{% block body %}{% endblock %}</div>
 
         {% include '_footer.html.twig' %}
 
