--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -8,9 +8,12 @@
 
     {% include 'include/_flashbag.html.twig' %}
 
-    <div class="float-right">
-        <a href="{{ path('category_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</a>
-    </div>
+    {% if is_granted('ROLE_ADMIN') %}
+        <div class="float-right">
+            <a href="{{ path('category_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</a>
+        </div>
+    {% endif %}
+
     <h3><i class="fas fa-list-alt"></i>&nbsp;Liste des catégories</h3>
 
     <div class="row my-2 text-center">
