--- a/templates/ingredient/index.html.twig
+++ b/templates/ingredient/index.html.twig
@@ -8,9 +8,12 @@
 
     {% include 'include/_flashbag.html.twig' %}
 
-    <div class="float-right">
-        <a href="{{ path('ingredient_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</a>
-    </div>
+    {% if is_granted('ROLE_ADMIN') %}
+        <div class="float-right">
+            <a href="{{ path('ingredient_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</a>
+        </div>
+    {% endif %}
+
     <h3><i class="fas fa-list-alt"></i>&nbsp;Liste des ingrédients</h3>
 
     <table class="table">
@@ -29,7 +32,9 @@
                 <td>{{ ingredient.name }}</td>
                 <td>{{ ingredient.unity.label }}</td>
                 <td class="text-right">
-                    <a href="{{ path('ingredient_update', {'id': ingredient.id}) }}" class="btn btn-sm btn-info"><i class="fas fa-edit"></i>&nbsp;Modifier</a>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('ingredient_update', {'id': ingredient.id}) }}" class="btn btn-sm btn-info"><i class="fas fa-edit"></i>&nbsp;Modifier</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
