Form changement password

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -35,6 +35,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <a class="dropdown-item" href="{{ path('app_change_password') }}">Changer mot de passe</a>
                         <a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
                     {% else %}
                         <a class="dropdown-item" href="{{ path('app_login') }}">Se connecter</a>
