--- a/templates/recipe/_create-ingredient.modal.html.twig
+++ b/templates/recipe/_create-ingredient.modal.html.twig
@@ -8,9 +8,8 @@
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                L'ingrédient <strong id="newIngredient"></strong> n'éxiste pas.<br><br>
-                Voulez vous ajouter ce nouvel ingrédient ?
+            <div class="modal-body" data-prototype="L'ingrédient <strong id='newIngredient'></strong> n'éxiste pas.<br><br>
+                Voulez vous ajouter ce nouvel ingrédient ?">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
