--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="my-5">
+<footer class="mt-5 ox-footer">
     <div class="clearfix"></div>
     <div class="container">
         <div class="row">
