--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
     <body>
         {% include '_navbar.html.twig' %}
 
-        <div class="container">{% block body %}{% endblock %}</div>
+        <div class="container min-vh-100">{% block body %}{% endblock %}</div>
 
         {% include '_footer.html.twig' %}
 
