--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -4,27 +4,24 @@
 
 {% block body %}
 
+    {% if is_granted('ROLE_ADMIN') %}
+        <div class="float-right">
+            <a href="{{ path('category_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter une catégorie</a>
+        </div>
+    {% endif %}
     <h1 class="my-4"><i class="fas fa-tag"></i>&nbsp;Catégories</h1>
 
     {% include 'include/_flashbag.html.twig' %}
 
-    {% if is_granted('ROLE_ADMIN') %}
-        <div class="float-right">
-            <a href="{{ path('category_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</a>
-        </div>
-    {% endif %}
-
-    <h3><i class="fas fa-list-alt"></i>&nbsp;Liste des catégories</h3>
-
     <div class="row my-2 text-center">
     {% for category in categories %}
-        <div class="col-2">
-            <div class="my-2"><a href="{{ path('category_show', {'id': category.id}) }}"><img src="{{ asset(uri_category~'/'~category.id~'.png') }}" width="100" height="100" class="rounded-circle"></a></div>
-            <h5><a href="{{ path('category_show', {'id': category.id}) }}">{{ category.name }}</a></h5>
+        <div class="col-lg-3 col-md-4 col-6">
+            <figure class="figure">
+                <a href="{{ path('category_show', {'id': category.id}) }}" class="img-hover-zoom rounded-circle"><img  src="{{ asset(uri_category~'/'~category.id~'.png') }}" class="figure-img img-fluid"></a>
+                <figcaption><a href="{{ path('category_show', {'id': category.id}) }}" class="text-dark d-block mt-1 font-weight-bold">{{ category.name }}</a></figcaption>
+            </figure>
         </div>
     {% endfor %}
     </div>
 
 {% endblock %}
-
-{# &nbsp;<a href="{{ path('ingredient_update', {'id': category.id}) }}" class="btn btn-sm btn-info"><i class="fas fa-edit"></i></a> #}
