--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -1,47 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Recipe index{% endblock %}
+{% block title %} - Recettes{% endblock %}
 
 {% block body %}
-    <h1>Recipe index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Person</th>
-                <th>Difficulty</th>
-                <th>Rate</th>
-                <th>TimePreparation</th>
-                <th>TimeCooking</th>
-                <th>Calories</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for recipe in recipes %}
-            <tr>
-                <td>{{ recipe.id }}</td>
-                <td>{{ recipe.name }}</td>
-                <td>{{ recipe.person }}</td>
-                <td>{{ recipe.difficulty }}</td>
-                <td>{{ recipe.rate }}</td>
-                <td>{{ recipe.timePreparation }}</td>
-                <td>{{ recipe.timeCooking }}</td>
-                <td>{{ recipe.calorie }}</td>
-                <td>
-                    <a href="{{ path('recipe_show', {'id': recipe.id}) }}">show</a>
-                    <a href="{{ path('recipe_update', {'id': recipe.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    {% if is_granted('ROLE_ADMIN') %}
+        <div class="float-right">
+            <a href="{{ path('recipe_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter une recette</a>
+        </div>
+    {% endif %}
 
-    <a href="{{ path('recipe_create') }}">Create new</a>
+    <h1 class="my-4">Les recettes</h1>
+
+    {% include 'include/_flashbag.html.twig' %}
+
+    <div class="row my-2">
+    {% for item in recipes %}
+        <div class="col-4">
+            <figure class="figure">
+                <a href="{{ path('recipe_show', { id: item.id }) }}" class="img-hover-zoom"><img  src="{{ asset(uri_recipe~'/'~item.id~'.png') }}" class="figure-img img-fluid rounded"></a>
+                <figcaption><a href="{{ path('recipe_show', { id: item.id }) }}" class="text-dark d-block mt-1 font-weight-bold">{{ item.name }}</a></figcaption>
+            </figure>
+        </div>
+    {% endfor %}
+    </div>
+
 {% endblock %}
