--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -1,46 +1,88 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Recipe{% endblock %}
+{% block title %} - Recette {{ recipe.name }}{% endblock %}
 
 {% block body %}
-    <h1>Recipe</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ recipe.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ recipe.name }}</td>
-            </tr>
-            <tr>
-                <th>Person</th>
-                <td>{{ recipe.person }}</td>
-            </tr>
-            <tr>
-                <th>Difficulty</th>
-                <td>{{ recipe.difficulty }}</td>
-            </tr>
-            <tr>
-                <th>Rate</th>
-                <td>{{ recipe.rate }}</td>
-            </tr>
-            <tr>
-                <th>TimePreparation</th>
-                <td>{{ recipe.timePreparation }}</td>
-            </tr>
-            <tr>
-                <th>TimeCooking</th>
-                <td>{{ recipe.timeCooking }}</td>
-            </tr>
-        </tbody>
-    </table>
+    {% if is_granted('ROLE_ADMIN') %}
+        <div class="float-right">
+            <div class="btn-toolbar mb-3" role="toolbar">
+                <div class="btn-group mr-2" role="group">
+                    <a href="{{ path('recipe_update', {'id': recipe.id}) }}" class="btn btn-info"><i class="fas fa-edit"></i>&nbsp;Modifier la recette</a>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 
-    <a href="{{ path('recipe_index') }}">back to list</a>
+    <h1 class="my-4">{{ recipe.name }}</h1>
 
-    <a href="{{ path('recipe_edit', {'id': recipe.id}) }}">edit</a>
+    <div class="row my-2">
+        <div class="col-8">
+            <img  src="{{ asset(uri_recipe~'/'~recipe.id~'.png') }}" class="figure-img img-fluid rounded">
+        </div>
+        <div class="col-4">
+            <table class="table table-borderless">
+            <tr>
+                <th><i class="fi-xxxxx3-team-solid"></i></th>
+                <td class="align-middle">{{ recipe.person }} personnes</td>
+            </tr>
+            <tr>
+                <th><i class="fi-xxxxx3-chef-hat"></i></th>
+                <td class="align-middle">{{ recipe.difficulty }}</td>
+            </tr>
+            <tr>
+                <th><i class="fi-cwlux3-euro-symbol"></th>
+                <td class="align-middle">{{ recipe.rate }}</td>
+            </tr>
+            <tr>
+                <th><i class="fi-xxxxx3-dot-restaurant"></i></th>
+                <td class="align-middle">{{ recipe.timePreparation }} min</td>
+            </tr>
+            <tr>
+                <th><i class="fi-xxxxx3-manhole-wide"></i></th>
+                <td class="align-middle">{{ recipe.timeCooking }} min</td>
+            </tr>
+            <tr>
+                <th><span class="border border-dark rounded-lg p-2 heading-3">kCal</span></th>
+                <td class="align-middle">{{ recipe.calorie }} / pers</td>
+            </tr>
+            </table>
+        </div>
+    </div>
 
-    {{ include('recipe/_delete_form.html.twig') }}
+    <div class="row mt-5">
+        <div class="col-3">
+            <h3>Ingredients</h3>
+            <table class="table table-borderless">
+            {% for item in recipe.ingredients %}
+                <tr>
+                    <th>{{ item.quantity }} {{ item.unity }}</th>
+                    <td>{{ item.ingredient.name }}</td>
+                </tr>
+            {% endfor %}
+            </table>
+        </div>
+        <div class="col-9">
+            <h3>Etapes</h3>
+            <table class="table table-borderless">
+            {% for item in recipe.steps %}
+                <tr>
+                    <th><div class="border border-dark rounded-circle p-0">&nbsp;{{ loop.index }}&nbsp;</div></th>
+                    <td>{{ item.content }}</td>
+                </tr>
+            {% endfor %}
+            </table>
+        </div>
+    </div>
+
+    
+    
+
+
+
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script defer src="https://friconix.com/cdn/friconix.js"> </script>
 {% endblock %}
