--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -18,7 +18,7 @@
     {% for item in recipes %}
         <div class="col-4">
             <figure class="figure">
-                <a href="{{ path('recipe_show', { id: item.id }) }}" class="img-hover-zoom"><img  src="{{ asset(uri_recipe~'/'~item.id~'.png') }}" class="figure-img img-fluid rounded"></a>
+                <a href="{{ path('recipe_show', { id: item.id }) }}" class="img-hover-zoom"><img  src="{{ asset(uri_recipe~'/'~item.id~'.png') | imagine_filter('thumb') }}" class="figure-img img-fluid rounded"></a>
                 <figcaption><a href="{{ path('recipe_show', { id: item.id }) }}" class="text-dark d-block mt-1 font-weight-bold">{{ item.name }}</a></figcaption>
             </figure>
         </div>
