--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -18,7 +18,7 @@
 
     <div class="row my-2">
         <div class="col-8">
-            <img  src="{{ asset(uri_recipe~'/'~recipe.id~'.png') }}" class="figure-img img-fluid rounded">
+            <img  src="{{ asset(uri_recipe~'/'~recipe.id~'.jpg') }}" class="figure-img img-fluid rounded">
         </div>
         <div class="col-4">
             <table class="table table-borderless">
