--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="/"><img src="{{ asset('apple-touch-icon.png') }}" width="32" height="32" class="d-inline-block align-top" alt=""> MyCook</a>
+        <a class="navbar-brand" href="{{ path('index_home') }}"><img src="{{ asset('apple-touch-icon.png') }}" width="32" height="32" class="d-inline-block align-top" alt=""> MyCook</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ path('index_home') }}">Accueil <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('recipe_index') }}">Recettes</a>
