--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container">
 
-    <div class="jumbotron my-2">
+    <div class="jumbotron my-5">
         <div class="float-left">
             <img src="{{ asset('images/home-inone.jpg') }}" width="400" class="mx-3">
         </div>
@@ -13,47 +13,33 @@
             <h1 class="display-4">Mes recettes</h1>
             <p class="lead">Retrouvez toutes mes recettes favorites</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <p>&nbsp;</p>
+            <a class="btn btn-primary btn-lg" href="{{ path('recipe_index') }}" role="button">Voir toutes les recettes</a>
         </div>
     </div>
 
-    <h2 class="my-3">Recettes</h2>
+    <h2 class="my-5">Recettes</h2>
     <div class="row my-2">
+    {% for item in recipes %}
         <div class="col-4">
-            <div class="text-center"><img src="{{ asset('images/home-recette1.jpg') }}" width="300"></div>
-            <div>Salade César au thon</div>
+            <figure class="figure">
+                <a href="{{ path('recipe_show', { id: item.id }) }}" class="img-hover-zoom"><img  src="{{ asset(uri_recipe~'/'~item.id~'.jpg') | imagine_filter('thumb') }}" class="rounded"></a>
+                <figcaption><a href="{{ path('recipe_show', { id: item.id }) }}" class="text-dark d-block mt-1 font-weight-bold">{{ item.name }}</a></figcaption>
+            </figure>
         </div>
-        <div class="col-4">
-            <div class="text-center"><img src="{{ asset('images/home-recette2.jpg') }}" width="300"></div>
-            <div>Kebab à l'assiette</div>
-        </div>
-        <div class="col-4">
-            <div class="text-center"><img src="{{ asset('images/home-recette3.jpg') }}" width="300"></div>
-            <div>Boeuf bourguignon</div>
-        </div>
+    {% endfor %}
     </div>
 
-    <h2 class="my-3">Catégories</h2>
+    <h2 class="my-5">Catégories</h2>
     <div class="row my-2 text-center">
+    {% for item in categories %}
         <div class="col-2">
-            <img src="{{ asset('images/home-cat1.jpg') }}" width="100" height="100" class="rounded-circle"><br>Entrées
+            <figure class="figure">
+                <a href="{{ path('category_show', {'id': item.0.id}) }}" class="img-hover-zoom rounded-circle"><img src="{{ asset(uri_category~'/'~item.0.id~'.jpg') | imagine_filter('cat') }}" class="figure-img img-fluid rounded-circle"></a>
+                <figcaption><a href="{{ path('category_show', {'id': item.0.id}) }}" class="text-dark d-block mt-1 font-weight-bold">{{ item.0.name }}</a></figcaption>
+            </figure>
         </div>
-        <div class="col-2">
-            <img src="{{ asset('images/home-cat2.jpg') }}" width="100" height="100" class="rounded-circle"><br>Plats
-        </div>
-        <div class="col-2">
-            <img src="{{ asset('images/home-cat3.jpg') }}" width="100" height="100" class="rounded-circle"><br>Désserts
-        </div>
-        <div class="col-2">
-            <img src="{{ asset('images/home-cat1.jpg') }}" width="100" height="100" class="rounded-circle"><br>Pizza
-        </div>
-        <div class="col-2">
-            <img src="{{ asset('images/home-cat2.jpg') }}" width="100" height="100" class="rounded-circle"><br>Pâtes
-        </div>
-        <div class="col-2">
-            <img src="{{ asset('images/home-cat3.jpg') }}" width="100" height="100" class="rounded-circle"><br>Pains
-        </div>
+    {% endfor %}
     </div>
 
 </div>
