--- a/templates/ingredient/index.html.twig
+++ b/templates/ingredient/index.html.twig
@@ -8,13 +8,28 @@
 
     {% include 'include/_flashbag.html.twig' %}
 
-    {% if is_granted('ROLE_ADMIN') %}
-        <div class="float-right">
-            <a href="{{ path('ingredient_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</a>
-        </div>
-    {% endif %}
+    
 
-    <h3><i class="fas fa-list-alt"></i>&nbsp;Liste des ingrédients</h3>
+    <div class="row my-2">
+        <div class="col-5">
+            <h3><i class="fas fa-list-alt"></i>&nbsp;Liste des ingrédients</h3>
+        </div>
+        <div class="col-7 text-right">
+            <div class="btn-toolbar justify-content-end" role="toolbar">
+                <div class="input-group mr-2">
+                    <select id="filterIngredient" class="form-control filterIngredient">
+                        <option value="{{ path('ingredient_index') }}"{% if app.request.pathinfo == path('ingredient_index') %} selected="selected"{% endif %}>Tous</option>
+                        <option value="{{ path('ingredient_index_without_cal') }}"{% if app.request.pathinfo == path('ingredient_index_without_cal') %} selected="selected"{% endif %}>Sans calories</option>
+                    </select>
+                </div>
+                {% if is_granted('ROLE_ADMIN') %}
+                <div class="btn-group" role="group">
+                    <a href="{{ path('ingredient_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</a>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 
     <table class="table">
         <thead>
