--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,11 +23,11 @@
         <div>
             <div class="form-group row">
                 <label class="col-form-label col-sm-2 required" for="inputUsername">Login</label>
-                <div class="col-sm-10"><input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus></div>
+                <div class="col-sm-10"><input type="text" value="{{ last_username }}" name="_username" id="inputUsername" class="form-control" required autofocus></div>
             </div>
             <div class="form-group row">
                 <label class="col-form-label col-sm-2" for="inputPassword">Password</label>
-                <div class="col-sm-10"><div class="custom-file"><input type="password" name="password" id="inputPassword" class="form-control" required></div>
+                <div class="col-sm-10"><div class="custom-file"><input type="password" name="_password" id="inputPassword" class="form-control" required></div>
             </div>
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
             
