Profile user en utilisant le bundle Olix

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -28,13 +28,14 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                        <img class="rounded-circle" src="{{ asset('images/avatar.png') }}" title="{{ app.user.name }}" width="32" height="32">
+                        <img class="rounded-circle" src="{{ asset(app.user.avatar) }}"  title="{{ app.user.name }}" width="32" height="32">
                     {% else %}
                         <img class="rounded-circle" src="{{ asset('images/avatar.png') }}" width="32" height="32">
                     {% endif %}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <a class="dropdown-item" href="{{ path('app_profile') }}">Mon profil</a>
                         <a class="dropdown-item" href="{{ path('app_change_password') }}">Changer mot de passe</a>
                         <a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
                     {% else %}
