--- a/templates/security/profile.html.twig
+++ b/templates/security/profile.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} - Changer son mot de passe{% endblock %}
+{% block title %} - Mon profil{% endblock %}
 
 {% block body %}
 
-    <h1 class="my-4"><i class="fas fa-user"></i>&nbsp;Changer son mot de passe</h1>
+    <h1 class="my-4"><i class="fas fa-user"></i>&nbsp;Mon profil</h1>
 
     {% include 'include/_flashbag.html.twig' %}
 
