--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -21,8 +21,7 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input id="sdSearch" class="form-control mr-sm-2" type="search" placeholder="Rechercher une recette" aria-label="Search">
             </form>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
