--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -7,7 +7,7 @@
 
     <div class="jumbotron my-5">
         <div class="float-left">
-            <img src="{{ asset('images/home-inone.jpg') }}" width="400" class="mx-3">
+            <img src="{{ asset(uri_recipe~'/'~random.id~'.jpg') | imagine_filter('thumb') }}" width="400" class="mx-3">
         </div>
         <div>
             <h1 class="display-4">Mes recettes</h1>
@@ -23,7 +23,7 @@
     {% for item in recipes %}
         <div class="col-4">
             <figure class="figure">
-                <a href="{{ path('recipe_show', { id: item.id }) }}" class="img-hover-zoom"><img  src="{{ asset(uri_recipe~'/'~item.id~'.jpg') | imagine_filter('thumb') }}" class="rounded"></a>
+                <a href="{{ path('recipe_show', { id: item.id }) }}" class="img-hover-zoom"><img  src="{{ asset(uri_recipe~'/'~item.id~'.jpg') | imagine_filter('thumb') }}" class="figure-img img-fluid rounded"></a>
                 <figcaption><a href="{{ path('recipe_show', { id: item.id }) }}" class="text-dark d-block mt-1 font-weight-bold">{{ item.name }}</a></figcaption>
             </figure>
         </div>
