[New] idées recettes

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('ingredient_index') }}">Ingrédients</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('idea_index') }}">Idées recettes</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input id="sdSearch" class="form-control mr-sm-2" type="search" placeholder="Rechercher une recette" aria-label="Search">
