--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
         {% include '_footer.html.twig' %}
 
         {% block javascripts %}
+            {% block importmap %}{{ importmap('app') }}{% endblock %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </body>
