--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -508,6 +508,154 @@ img {
     }
 }
 
+/* ----- CTA Area CSS ----- */
+
+.cta-area {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    height: 675px;
+    background-attachment: fixed;
+    .cta-content {
+        h2 {
+            font-size: 72px;
+            margin-bottom: 20px;
+            color: $white-color;
+            font-weight: 400;
+            @media #{$breakpoint-lg} {
+                font-size: 48px;
+            }
+            @media #{$breakpoint-md} {
+                font-size: 48px;
+            }
+            @media #{$breakpoint-xs} {
+                font-size: 30px;
+            }
+        }
+        p {
+            color: $white-color;
+            margin-bottom: 100px;
+            font-size: 16px;
+            @media #{$breakpoint-xs} {
+                margin-bottom: 50px;
+            }
+        }
+    }
+}
+
+/* ----- List Recipe Area ----- */
+
+.list-recipe-area {
+    position: relative;
+    z-index: 1;
+    padding-bottom: 50px;
+}
+
+.single-recipe-area {
+    position: relative;
+    z-index: 1;
+    .img-hover-zoom {
+        position: relative;
+        overflow: hidden;
+        display: block;
+        flex: 0, 0;
+        border-bottom: 3px solid $bg-default;
+        img {
+            transition-duration: 500ms;
+            width: 100%;
+            border-bottom: 0;
+            
+        }
+        &:hover img{
+            transform: scale(1.2) rotate(2.5deg);
+        }
+        &:hover .icon {
+            opacity: 1;
+            visibility: visible;
+        }
+        .icon {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(64, 186, 55, 0.6);
+            top: 0;
+            left: 0;
+            z-index: 10;
+            cursor: pointer;
+            opacity: 0;
+            visibility: hidden;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -ms-grid-row-align: center;
+            align-items: center;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            -webkit-transition-duration: 500ms;
+            transition-duration: 500ms;
+        }
+    }
+    .recipe-title {
+        padding-top: 30px;
+        text-align: center;
+        h5 {
+            font-size: 18px;
+            margin-bottom: 10px;
+            font-weight: 400;
+            @include trans-duration(500ms);
+            &:hover,
+            &:focus {
+                color: $bg-default;
+            }
+        }
+    }
+}
+
+/* ----- List Category Area ----- */
+
+.list-category-area {
+    position: relative;
+    z-index: 1;
+    padding-bottom: 50px;
+}
+
+.single-category-area {
+    position: relative;
+    z-index: 1;
+    .img-hover-zoom {
+        position: relative;
+        overflow: hidden;
+        display: block;
+        flex: 0, 0;
+        border-bottom: 3px solid $bg-default;
+        img {
+            transition-duration: 500ms;
+            width: 100%;
+            border-bottom: 0;
+        }
+        &:hover img{
+            transform: scale(1.2) rotate(2.5deg);
+        }
+    }
+    .category-title {
+        padding-top: 20px;
+        text-align: center;
+        h5 {
+            font-size: 18px;
+            margin-bottom: 10px;
+            font-weight: 400;
+            @include trans-duration(500ms);
+            &:hover,
+            &:focus {
+                color: $bg-default;
+            }
+        }
+    }
+}
+
 /* ----- Footer Area CSS ----- */
 
 .follow-us-photos {
