--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -315,6 +315,52 @@ img {
     }
 }
 
+/* ----- Preloader ----- */
+
+#preloader {
+    background-color: $white-color;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 5000;
+    img {
+        width: 30px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        @include transform(translate(-50%, -50%));
+        z-index: 10;
+    }
+    .circle-preloader {
+        display: block;
+        width: 60px;
+        height: 60px;
+        border: 2px solid #ccc;
+        border-bottom-color: $border-color;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        animation: spin 2s infinite linear;
+    }
+    @-webkit-keyframes spin {
+        100% {
+            @include transform(rotate(360deg));
+        }
+    }
+    @keyframes spin {
+        100% {
+            @include transform(rotate(360deg));
+        }
+    }
+}
+
 /* ----- Search Wrapper ----- */
 
 .search-wrapper {
