--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block title %} - Recettes{% endblock %}
 
-{% block body %}
+{% block content %}
 
     {% if is_granted('ROLE_ADMIN') %}
         <div class="float-right">
@@ -10,19 +10,16 @@
         </div>
     {% endif %}
 
-    <h1 class="my-4">Les recettes</h1>
+    {% include 'include/_breadcrumb.html.twig' with {'title': 'Les Recettes'} only %}
 
-    {% include 'include/_flashbag.html.twig' %}
-
-    <div class="row my-2">
-    {% for item in recipes %}
-        <div class="col-4">
-            <figure class="figure">
-                <a href="{{ path('recipe_show', { id: item.id }) }}" class="img-hover-zoom"><img  src="{{ asset(uri_recipe~'/'~item.id~'.jpg') | imagine_filter('thumb') }}" class="figure-img img-fluid rounded"></a>
-                <figcaption><a href="{{ path('recipe_show', { id: item.id }) }}" class="text-dark d-block mt-1 font-weight-bold">{{ item.name }}</a></figcaption>
-            </figure>
+    <section class="list-recipe-area mt-5">
+        <div class="container">
+            <div class="row">
+                {% for item in recipes %}
+                    {% include 'recipe/_list-one.html.twig' with {'item': item} only %}
+                {% endfor %}
+            </div>
         </div>
-    {% endfor %}
-    </div>
+    </section>
 
 {% endblock %}
